Change z-index to avoir display issue with mat-tab

--- a/src/app/core/main-nav/main-nav.component.scss
+++ b/src/app/core/main-nav/main-nav.component.scss
@@ -5,7 +5,7 @@
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .icon-2x {
